# synonyms

./: Application.hs  Main.hs  Spec.hs  Synonyms.hs  synonyms.cabal  synonyms.txt
