name:                synonyms
version:             0.1.0.0
synopsis:            Synonym CLI command
homepage:            https://github.com/justincampbell/synonyms
license:             MIT
license-file:        LICENSE
author:              Justin Campbell
maintainer:          justin@justincampbell.me
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable synonyms
  main-is:             Main.hs

  build-depends:       base >=4.7 && <4.8

  default-language:    Haskell2010
