name:                synonyms
version:             0.1.0.0
synopsis:            Synonym CLI command
homepage:            https://github.com/justincampbell/synonyms
license:             MIT
license-file:        LICENSE
author:              Justin Campbell
maintainer:          justin@justincampbell.me
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8
  exposed-modules:     Synonyms

executable synonyms
  main-is:             Main.hs

  build-depends:       base >=4.7 && <4.8,
                       synonyms

  default-language:    Haskell2010

test-suite spec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends:       base >=4.7 && <4.8
                     , synonyms
                     , hspec >=1.1
                     , QuickCheck
